--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,6 +1,9 @@
 homepage: "https://consent.studio"
 documentation: "https://vallonic.notion.site/consent-studio-f1749f7b6b1a406482f43634f81b2b5f"
 versions:
+  # 3. Stability update
+  - sha: 10af22920191f258bc968be09cbeb40e4cab2d9a
+    changeNotes: Improved reading of the consent cookie upon consent initialization
   # 2. wait_for_update update
   - sha: e7958ae11e61cfb053b91572481f6a8e6e5e64e6
     changeNotes: Added the wait_for_update option to the setDefaultConsentState function call
