--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,6 +1,9 @@
 homepage: "https://consent.studio"
 documentation: "https://vallonic.notion.site/consent-studio-f1749f7b6b1a406482f43634f81b2b5f"
 versions:
+  # 4. consent.studio Developer ID update
+  - sha: 1d3c9cacf6257ce5076dd0d85b496c19ba7e1397
+    changeNotes: Implements consent.studio's Developer ID
   # 3. Stability update
   - sha: 10af22920191f258bc968be09cbeb40e4cab2d9a
     changeNotes: Improved reading of the consent cookie upon consent initialization
