--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,6 +1,9 @@
 homepage: "https://consent.studio"
 documentation: "https://vallonic.notion.site/consent-studio-f1749f7b6b1a406482f43634f81b2b5f"
 versions:
+  # 5. Application base URL update
+  - sha: 1114ebf41589a8738b1c53477fadc488406acf7a
+    changeNotes: Implements our move from consent.studio to my.consent.studio
   # 4. consent.studio Developer ID update
   - sha: 1d3c9cacf6257ce5076dd0d85b496c19ba7e1397
     changeNotes: Implements consent.studio's Developer ID
