--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,6 +1,9 @@
 homepage: "https://consent.studio"
 documentation: "https://vallonic.notion.site/consent-studio-f1749f7b6b1a406482f43634f81b2b5f"
 versions:
+  # 6. Revert previous update due to an issue with the GTM Gallery
+  - sha: bc6810e211b3aed6a4d523fb04536679a36b1d5b
+    changeNotes: Revert the previous update
   # 5. Application base URL update
   - sha: 1114ebf41589a8738b1c53477fadc488406acf7a
     changeNotes: Implements our move from consent.studio to my.consent.studio
