--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,6 +1,9 @@
 homepage: "https://consent.studio"
 documentation: "https://vallonic.notion.site/consent-studio-f1749f7b6b1a406482f43634f81b2b5f"
 versions:
+  # 7. Changed the parameters for the default consent state
+  - sha: 242e81cc15fab3b648a161e20d0bc5e63f00a74b
+    changeNotes: Changed the parameters for the default consent state
   # 6. Revert previous update due to an issue with the GTM Gallery
   - sha: c8518da91e211afb7c1a917f87c09ef5af192e55
     changeNotes: Revert the previous update
