--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,6 +1,9 @@
 homepage: "https://consent.studio"
 documentation: "https://vallonic.notion.site/consent-studio-f1749f7b6b1a406482f43634f81b2b5f"
 versions:
+  # 8. Will no longer update the security_storage consent type; added permission request for dataLayer write access
+  - sha: ed1aab58f3581ddaf00f152e08bed50779600681 
+    changeNotes: Will no longer update the security_storage consent type; added permission request for dataLayer write access
   # 7. Changed the parameters for the default consent state
   - sha: 242e81cc15fab3b648a161e20d0bc5e63f00a74b
     changeNotes: Changed the parameters for the default consent state
