--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,6 +1,9 @@
 homepage: "https://consent.studio"
 documentation: "https://vallonic.notion.site/consent-studio-f1749f7b6b1a406482f43634f81b2b5f"
 versions:
+  # 11. Verified CMP optimizations
+  - sha: 6e16f1e818fcfd9a9b548a0bfd095965efd38e05
+    changeNotes: Re-introduced security_storage status and adjusted the default command
   # 10. Permissions for writing to the dataLayer
   - sha: 113ba7ae8a30d04a93836ac1df84e2b183c2f169
     changeNotes: Adjusted permission requests to write the relevant keys to the dataLayer.
