--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
 homepage: "https://consent.studio"
-documentation: "https://vallonic.notion.site/consent-studio-f1749f7b6b1a406482f43634f81b2b5f"
+documentation: "https://intercom.help/consent-studio"
 versions:
   # 11. Verified CMP optimizations
   - sha: 6e16f1e818fcfd9a9b548a0bfd095965efd38e05
